k8s/hledger-web/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hledger-web-deployment
spec:
  selector:
    matchLabels:
      app: hledger-web
  template:
    metadata:
      labels:
        app: hledger-web
    spec:
      containers:
        - name: hledger-web
          image: dastapov/hledger
          securityContext:
            runAsUser: 0            
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 5000
          volumeMounts:
            - name: hledger-data
              mountPath: /data/mounted
      volumes:
        - name: hledger-data
          nfs:
            server: 192.168.0.4
            path: /mnt/nfs/hledger-data
