k8s/hledger-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hledger-web-svc
  labels:
    app: hledger-web
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: hledger-web
