k8s/hledger-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hledger-web-ingress
  namespace: hledger-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: finance.cjcocokrisp.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hledger-web-svc
            port:
              number: 5000
